[gd_scene load_steps=10 format=3 uid="uid://b08a0a7wtcyqe"]

[ext_resource type="Script" uid="uid://pd4hkcsayvl5" path="res://scenes/intro_cutscene.gd" id="1_on3y1"]
[ext_resource type="Texture2D" uid="uid://dbqlrpxur6ugk" path="res://assets/images/intro/scene_1-1.png" id="2_wo2cs"]
[ext_resource type="Texture2D" uid="uid://dtb13cy8d48wm" path="res://assets/images/intro/scene_1-2.png" id="3_bprnf"]
[ext_resource type="Texture2D" uid="uid://4d7f380r2rn5" path="res://assets/images/intro/scene_1-3.png" id="4_pbanw"]
[ext_resource type="Texture2D" uid="uid://bfe0a1qc61j3t" path="res://assets/images/intro/scene_1-4.png" id="5_fxsd4"]
[ext_resource type="Texture2D" uid="uid://cpki0ho0ibk5n" path="res://assets/images/intro/scene_1-5.png" id="6_rqbdd"]
[ext_resource type="Texture2D" uid="uid://cphqjil1rwhwf" path="res://assets/images/intro/scene_1-6.png" id="7_rh6bc"]
[ext_resource type="Texture2D" uid="uid://w02rteuow1qv" path="res://assets/images/intro/scene_1-7.png" id="8_3jwfw"]
[ext_resource type="Texture2D" uid="uid://jatb86x1dpp1" path="res://assets/images/intro/scene_1-8.png" id="9_ndqjh"]

[node name="IntroCutscene" type="Node2D"]
script = ExtResource("1_on3y1")

[node name="Panel1" type="Sprite2D" parent="."]
position = Vector2(-1500, 0)
texture = ExtResource("2_wo2cs")

[node name="Panel2" type="Sprite2D" parent="."]
position = Vector2(1060, -1060)
texture = ExtResource("3_bprnf")

[node name="Panel3" type="Sprite2D" parent="."]
position = Vector2(-500, 1500)
texture = ExtResource("4_pbanw")

[node name="Panel4" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("5_fxsd4")

[node name="Panel5" type="Sprite2D" parent="."]
texture = ExtResource("6_rqbdd")

[node name="Panel6" type="Sprite2D" parent="."]
position = Vector2(0, -1000)
texture = ExtResource("7_rh6bc")

[node name="Panel7" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("8_3jwfw")

[node name="Panel8" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0)
texture = ExtResource("9_ndqjh")

[node name="Timer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(0.3, 0.3)

[node name="BG" type="ColorRect" parent="."]
z_index = -1
offset_left = -2235.0
offset_top = -1483.0
offset_right = -2195.0
offset_bottom = -1443.0
scale = Vector2(112.993, 70.0458)
color = Color(0.882353, 0.929412, 0.945098, 1)

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
